[package]
name = "trimothy"
version = "0.5.0"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
rust-version = "1.81"
description = "Traits for trimming slices, vecs, and strings."
license = "WTFPL"
repository = "https://github.com/Blobfolio/trimothy"
readme = "README.md"
keywords = [ "trim" ]
categories = [ "no-std" ]
exclude = [
	".github",
	".gitignore",
	".righteous-sandbox.json",
	"doc",
	"justfile",
]

[package.metadata.bashman]
name = "Trimothy"

[dev-dependencies]
brunch = "0.6.*"

[[bench]]
name = "fn_trim_mut"
harness = false

[[bench]]
name = "fn_trim_normal"
harness = false

[[bench]]
name = "fn_trim_slice"
harness = false
